fixed responsive bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -146,10 +146,13 @@ button:active {
 
     .row .vimeo {
         width: 100%;
+        max-width: 100%;
     }
 
     .row .soundcloud {
-        width: 100%;}
+        width: 100%;
+        max-width: 100%;
+    }
     
 }
 
